Import of GARU/App-Rad-0.5 from CPAN.
gitpan-cpan-distribution: App-Rad
gitpan-cpan-version:      0.5
gitpan-cpan-path:         GARU/App-Rad-0.5.tar.gz
gitpan-cpan-author:       GARU
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for App-Rad
 
+0.05    10/28
+        Separated default() into default() and invalid(). Updated documentation. More tests.
+
 0.04    10/26
         Fixed some testing issues. Added Stash, and improved TODO list.
 
