--- a/Changes
+++ b/Changes
@@ -1,17 +1,20 @@
 Revision history for App-Rad
 
-0.05    10/28
+0.06    2008/11/03
+        Fixed POD. Added license to Meta.yml. Added load_config and config methods.
+
+0.05    2008/10/28
         Separated default() into default() and invalid(). Updated documentation. More tests.
 
-0.04    10/26
+0.04    2008/10/26
         Fixed some testing issues. Added Stash, and improved TODO list.
 
-0.03    10/22
+0.03    2008/10/22
         Added getopt integration. First public release, on an unsuspecting world.
 
-0.02    10/05
+0.02    2008/10/05
         Added controller object and documentation.
 
-0.01    09/20
+0.01    2008/09/20
         First version, for internal use only.
 
