--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-Rad
 
+0.10    2009/04/10
+        Added plugins support!
+        Getopt::Long requirement is specific to getopt() method.
+        Updated documentation.
+
 0.09    2008/12/22
         Fixed dependencies check and documentation typo.
 
@@ -7,9 +12,9 @@ Revision history for App-Rad
         Added Help() attribute. Put help, include and exclude into separated modules. Updated documentation. More tests.
 
 0.07    2008/11/12
-        * SMALL API CHANGE: $c->register_commands()'s parameters ignore_prefix, ignore_suffix and ignore_regexp now *must* start with a dash.
-        * $c->register_commands() helper method now can be used to include context documentation on available commands (RT #40578).
-        * Updated documentation. More tests.
+        SMALL API CHANGE: $c->register_commands()'s parameters ignore_prefix, ignore_suffix and ignore_regexp now *must* start with a dash.
+        $c->register_commands() helper method now can be used to include context documentation on available commands (RT #40578).
+        Updated documentation. More tests.
 
 0.06    2008/11/03
         Fixed POD. Added license to Meta.yml. Added load_config and config methods.
